--- a/upgrade.html
+++ b/upgrade.html
@@ -20,6 +20,7 @@ div {
 <div>
 <p style="font-size: 20pt">Glückwunsch!</p>
 <p id="upgrade"></p>
+<a href="https://github.com/Niklas20114552/brapy/blob/main/changelog.md"><p>Changelog</p></a>
 </div>
 <script>
 var urlParam = function(name, w){
